--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -1,12 +1,21 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", serif;
+    --fonte3: "Sriracha", serif;
+}
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
 body {
-    background-color: darkgrey;
+    background-color: darkgrey; 
+    font-family: var(--fonte1);
 }
 
 header {
@@ -18,6 +27,8 @@ header {
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 8vw;
 
 }
 
@@ -40,19 +51,40 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
+section p {
+    padding-bottom: 2em;
+}
+
+
 .normal {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
 .imagem {
     background-color: rgb(51, 51, 51);
+    color: white;
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.541);
+    background-attachment: fixed;
 }
 
 .imagem > p {
-    background-color: rgba(0, 0, 0, 0.296);
-    max-width: 35%;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.504);
+    padding: 7px;  
+}
+
+#img01 {
+    background-image: url(../desafio012/imagens/background001.jpg);
+    background-position: right center;
+}
+
+#img02 {
+    background-image: url(../desafio012/imagens/background002.jpg);
 }
 
 footer {
