--- a/exercicios/ex027/flex013-menu-flexbox/style.css
+++ b/exercicios/ex027/flex013-menu-flexbox/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 header {
+    width: 100vw;
     background-color: gray;
     color: white;
     padding: 10px;
@@ -49,9 +50,11 @@ header a:hover {
 }
 
 main {
+    max-width: 600px;
     background-color: white;
     margin: 10px;
     padding: 10px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.363);
     border-radius: 10px;
+    margin: auto;
 }
